# MemoryX

./: .env.example  .gitignore  AI-INSTALL.md  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.yml
memcp-engine/: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  cliff.toml  docker-compose.yml  pyproject.toml
memcp-engine/.github/: release.yml
memcp-engine/.github/workflows/: ci.yml  release.yml
memcp-engine/agents/: memcp-analyzer.md  memcp-entity-extractor.md  memcp-mapper.md  memcp-synthesizer.md
memcp-engine/benchmark_output/: benchmark_report.md  benchmark_results.json
memcp-engine/docs/: ARCHITECTURE.md  COMPARISON.md  GRAPH.md  HOOKS.md  SEARCH.md  TOOLS.md
memcp-engine/docs/adr/: 001-sqlite-filesystem-hybrid-storage.md  002-tiered-search-architecture.md  003-magma-4-graph-memory.md  004-sub-agents-over-sub-llms.md  005-minimal-core-dependencies.md  006-mcp-tools-over-python-repl.md  007-auto-save-hook-architecture.md  008-three-zone-retention-lifecycle.md  009-user-level-global-deployment.md  010-twelve-factor-configuration.md  011-hebbian-learning-edge-decay.md  012-reciprocal-rank-fusion-search.md  013-memory-feedback-consolidation.md  README.md
memcp-engine/hooks/: auto_save_reminder.py  pre_compact_save.py  reset_counter.py
memcp-engine/hooks/snippets/: settings.json
memcp-engine/scripts/: install.sh  setup-hooks.sh  uninstall.sh
memcp-engine/src/memcp/: __init__.py  __main__.py  config.py  server.py
memcp-engine/templates/: CLAUDE.md
memcp-engine/tests/benchmark/: conftest.py  datasets.py  metrics.py  report.py  test_context_rot.py  test_context_window.py  test_scale.py  test_token_efficiency.py
memcp-engine/tests/integration/: conftest.py  test_concurrency.py  test_mcp_roundtrip.py
memcp-engine/tests/unit/: conftest.py  test_chunker.py  test_config.py  test_consolidation.py  test_context_store.py  test_embed_cache.py  test_embeddings.py  test_entity_extraction.py  test_feedback.py  test_fileutil.py  test_graph.py  test_hebbian.py  test_hooks.py  test_memory.py  test_project.py  (+6 more)
(+71 files in other folders)
